[package]
name = "track-work"
description = "A command line utility to track your productive time"
homepage = "https://github.com/Argannor/track-work"
documentation = "https://github.com/Argannor/track-work"
repository = "https://github.com/Argannor/track-work"
keywords = ["track", "work", "time", "productivity"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["Argannor <arga@argannor.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
crossterm = "0.26.1"
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tui = "0.19.0"
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.windows]
version = "0.48"
features = [
#    "Data_Xml_Dom",
    "Win32_Foundation",
#    "Win32_Security",
#    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]